Separando las funciones utilitarias de openlayers.

--- a/src/mapas_base/basemap_list.html
+++ b/src/mapas_base/basemap_list.html
@@ -71,7 +71,7 @@
 					if(_lyr.getSource().getParams || false){
 						_lyr.getSource().updateParams(config);
 						// @ifdef DEBUG
-						console.log(_lyr.getSource().getParams());
+						//console.log(_lyr.getSource().getParams());
 						// @endif
 					}
 				//}
@@ -116,7 +116,7 @@
 								
 					if(lyr_info.loaded || false){
 						// @ifdef DEBUG
-						console.log('ya esta cargado', lyr_info);
+						//console.log('ya esta cargado', lyr_info);
 						// @endif
 						return lyr_info; //si ya lo ha cargado
 					}
