--- a/src/mapas_base/bingmaps.html
+++ b/src/mapas_base/bingmaps.html
@@ -8,9 +8,16 @@
 </script>
 
 <script id="tmpl-bingmaps" type="text/x-tmpl">
-<select id="bing-layer-select" onchange="onSelectBaseMap('lyr_bingmap',this);">
-	<option value="Aerial">Im&aacute;gen satelital</option>
-	<option value="AerialWithLabels" selected>Im&aacute;gen con etiquetas</option>
-	<option value="Road">Calles</option>
-</select>
+<div class="modal-content modal-body form-horizontal">	
+	<div class=" form-group">
+    <label for="bing-layer-select" class="pull-left col-sm-2 control-label">Mapa</label>
+    <div class="col-sm-10">
+        <select class="form-control" id="bing-layer-select" onchange="onSelectBaseMap('lyr_bingmap',this);">
+        	<option value="Aerial">Im&aacute;gen satelital</option>
+        	<option value="AerialWithLabels" selected>Im&aacute;gen con etiquetas</option>
+        	<option value="Road">Calles</option>
+        </select>
+    </div>
+	</div>
+</div>
 </script>
