--- a/test/mapasbase.html
+++ b/test/mapasbase.html
@@ -50,7 +50,9 @@
     </script>
   </body>
 </html>
+<script src="../build/mapas_base.min.js"></script>
 <script type="text/javascript">
-		const idpanel = 'base';
+	jQuery(document).ready(function(){
+		renderMapasBase('base');
+	});
 </script>
-<script src="mapas_base.min.js"></script>
