Se separaron las funciones de openlayers.

--- a/src/geoprocess/sicob_identificar_predio.html
+++ b/src/geoprocess/sicob_identificar_predio.html
@@ -74,6 +74,9 @@ function sicob_identificar_predio_success(result){
 		lyrs : lyr_predios,
 		success : function(result){
 			return true;
+		},
+		fail : function(jqXHR){
+			return false;
 		}
 	});
 	/*
