--- a/test/mapasbase.html
+++ b/test/mapasbase.html
@@ -50,6 +50,9 @@
     </script>
   </body>
 </html>
+<!--
+<script src="../src/mapas_base/mapas_base.js"></script>
+-->
 <script src="../build/mapas_base.min.js"></script>
 <script type="text/javascript">
 	jQuery(document).ready(function(){
