FIX:menu Mapas Base no habrian los paneles collapsibles.

--- a/test/vectorstyle.html
+++ b/test/vectorstyle.html
@@ -118,10 +118,10 @@
 
     /* Agregando el menu para seleccionar Mapa Base */
     $.when(
-    	$.getScript('http://viglino.github.io/ol3-ext/control/buttoncontrol.js'),
-    	$.getScript('http://viglino.github.io/ol3-ext/control/togglecontrol.js'),  	   
-    	$.getStylesheet('http://viglino.github.io/ol3-ext/control/overlaycontrol.css'), 
-    	$.getScript('http://viglino.github.io/ol3-ext/control/overlaycontrol.js'))
+    	$.getScript('https://viglino.github.io/ol3-ext/control/buttoncontrol.js'),
+    	$.getScript('https://viglino.github.io/ol3-ext/control/togglecontrol.js'),  	   
+    	$.getStylesheet('https://viglino.github.io/ol3-ext/control/overlaycontrol.css'), 
+    	$.getScript('https://viglino.github.io/ol3-ext/control/overlaycontrol.js'))
     .then(function () {
       
 			$('<div id="menu"/>')
