Actualización desde atom

--- a/src/index.html
+++ b/src/index.html
@@ -117,7 +117,7 @@ Usar librerias de github:
             </ul>
         </div>
 
-        <!-- Tab panes -->
+        <!-- Tab panels -->
         <div class="sidebar-content modal-content">
             <div class="sidebar-pane" id="maps">
                 
