--- a/src/index.html
+++ b/src/index.html
@@ -78,6 +78,8 @@ Usar librerias de github:
 
 </head>
 <body>
+	<center id="top-navbar" class="hide navbar-fixed-top ol-control" style="left:50%; margin-left:-50px; width:100px; text-align: center" >
+	</center>
     <div id="sidebar" class="sidebar collapsed">
         <!-- Nav tabs -->
         <div class="sidebar-tabs">
