--- a/src/index.html
+++ b/src/index.html
@@ -1,32 +1,36 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>geoSICOB View</title>
-
+    <title>geoVision</title>
+	<meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
-	<link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-  <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/openlayers/4.0.1/ol.css" type="text/css">
-  <link rel="stylesheet" href="sidebar-v2/ol3-sidebar.min.css" />
+	<link href="node_modules/font-awesome/css/font-awesome.min.css" rel="stylesheet">
+	<link rel="stylesheet" href="node_modules/bootstrap/dist/css/bootstrap.min.css">
+	<link rel="stylesheet" href="ol/ol.css">
+	<link rel="stylesheet" href="sidebar-v2/ol3-sidebar.min.css" />
 <!--
 Usar librerias de github:
 1.- Find your link on GitHub, and click to the "Raw" version of the file.
 2.- Copy the URL, and link to it.
 3.- Change raw.githubusercontent.com to rawgit.com (non-production) or cdn.rawgit.com (production)
 -->
-	<link rel="stylesheet" href="https://rawgit.com/erikfva/ol3-ext/gh-pages/control/layerswitchercontrol.css" />
+<link rel="stylesheet" href="ol-ext/dist/ol-ext.min.css" />
 
 <style>
-        body {
-            padding: 0;
-            margin: 0;
-            overflow: hidden;
-        }
-        html, body, #map {
-            height: 100%;
-            font: 10pt "Helvetica Neue", Arial, Helvetica, sans-serif;
-        }
+      html, body {
+        margin: 0;
+        height: 100%;
+				overflow: hidden;
+				padding: 0;
+      }
+
+      #map {
+        position: absolute;
+        top: 0;
+        bottom: 0;
+        width: 100%;
+      }
         .shadow-b{
         	-webkit-box-shadow: 0px 10px 21px 0px rgba(50, 50, 50, 0.41);
         	-moz-box-shadow:    0px 10px 21px 0px rgba(50, 50, 50, 0.41);
@@ -69,12 +73,12 @@ Usar librerias de github:
 
 </style>
 
-	<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-	<script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js" integrity="sha384-Tc5IQib027qvyjSMfHjOMaLkfuWVxZxUPnCJA7l2mCWNIpG9mGCD8wGNIcPD7Txa" crossorigin="anonymous"></script>
-	<script src="https://cdn.rawgit.com/blueimp/JavaScript-Templates/master/js/tmpl.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/openlayers/4.0.1/ol.js" type="text/javascript"></script>
-	<!-- Control LayerSwitcher -->
-	<script  src="https://rawgit.com/erikfva/ol3-ext/gh-pages/control/layerswitchercontrol.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<script src="node_modules/bootstrap/dist/js/bootstrap.min.js"></script>
+<script src="https://cdn.rawgit.com/blueimp/JavaScript-Templates/master/js/tmpl.min.js"></script>
+<script src="ol/ol.js"></script>
+<!-- Control LayerSwitcher -->
+<script type="text/javascript" src="ol-ext/dist/ol-ext.min.js"></script>
 
 </head>
 <body>
@@ -232,7 +236,16 @@ if (/firefox/i.test(navigator.userAgent)){
 //Control principal del mapa
 var map = new ol.Map({
     target: 'map',
-    renderer: ["canvas", "dom"],
+	renderer: ["canvas", "dom"],
+	controls: ol.control.defaults({
+		/*
+        attributionOptions: {
+            collapsible: false
+		},*/
+		zoomOptions: {
+			zoomOutLabel:'-'
+		}
+    }),
     layers: [],
     loadTilesWhileInteracting: true,
     view: new ol.View({
@@ -490,18 +503,6 @@ function addSHP(data){
 <!-- login / logout -->
 	<!-- inject:login:js -->
 	<!-- endinject -->
-
-	<script>
-		jQuery(document).ready(function(){
-			if (window.frameElement ){
-				var ifrm = window.frameElement;
-				$(ifrm).css('height', top.document.documentElement.clientHeight + 'px' ) ;
-				$(top).bind('resize', function () {
-					$(ifrm).css('height', top.document.documentElement.clientHeight + 'px' ) ;
-				})
-			}	
-		})
-	</script>
 
 </body>
 </html>
